Support security config updates on the REST API
Instead of
SECURITY_UNSUPPORTED_RESTAPI_ALLOW_SECURITYCONFIG_MODIFICATION settings
which we use to update security configuration
a new permission was added: `restapi:admin/config/update`.

Signed-off-by: Andrey Pleskach <ples@aiven.io>